samples/_failures_safe/1761437094_2e8d4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ee51b3d.c:139:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  139 | void display
      | ^~~~
